# ConfMe-Workshop

./: README.md
00_basic_example/: README.md  pyproject.toml  requirements.txt
00_basic_example/src/: config.yaml  first_steps.py
00_basic_example/src_advanced/: advanced_usage.py
00_basic_example/src_advanced/config/: config_dev.yaml  config_prod.yaml
01_sagemaker_training/: Dockerfile  README.md  pyproject.toml
01_sagemaker_training/config/: mnist_config.yml
01_sagemaker_training/mnist/: config.py  main_with_confme.py  main_without_confme.py  model.py  train.py
