[tool.poetry]
name = "00_basic_example"
version = "0.1.0"
description = ""
authors = ["Iwan Silvan Bolzern <iwan.bolzern@zuehlke.com>"]

[tool.poetry.dependencies]
python = "^3.7.9"
confme = "^0.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
