[tool.poetry]
name = "01_sagemaker_training"
version = "0.1.0"
description = ""
authors = ["Iwan Silvan Bolzern <iwan.bolzern@zuehlke.com>"]

[tool.poetry.dependencies]
python = "^3.7.9"
confme = "^0.0.8"
torch = "^1.7.1"
torchvision = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
